vcluster_versioned_docs/version-0.37.0/configure/vcluster-yaml/experimental/_code/sleepmode-ingress-examples.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bar

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-deployment
  namespace: bar
  labels:
    app: bar-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - command:
            - /agnhost
            - serve-hostname
            - --http=true
            - --port=8080
          image: registry.k8s.io/e2e-test-images/agnhost:2.39
          name: bar-app

---

kind: Service
apiVersion: v1
metadata:
  name: bar-service
  namespace: bar
spec:
  selector:
    app: bar
  ports:
    # Default port used by the image
    - port: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: bar
spec:
  ingressClassName: nginx # the ingress-nginx project has been deprecated, we recommend using a different ingress class
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /bar
            backend:
              service:
                name: bar-service
                port:
                  number: 8080
      host: backend.local
